# pyc-shell

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  codecov.yml  pyc.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: rus.md
docs/lev/: LICENSE.txt  README.md
docs/translators/: bg.md  by.md  rs.md  ru.md  rus.md  ua.md
src/: lib.rs  main.rs  runtime.rs
src/config/: configparser.rs  mod.rs
src/lev/: mod.rs
src/runtime/: mod.rs  props.rs
src/runtime/imiop/: mod.rs  shiop.rs  subprociop.rs
src/shell/: history.rs  mod.rs  process.rs  unixsignal.rs
src/shell/proc/: mod.rs  pipe.rs  process.rs
src/shell/prompt/: cache.rs  mod.rs
src/shell/prompt/modules/: colors.rs  git.rs  language.rs
src/shellenv/: mod.rs  process.rs
src/shellenv/prompt/: cache.rs  mod.rs
src/shellenv/prompt/modules/: colors.rs  git.rs  language.rs  mod.rs
src/translator/: ioprocessor.rs  mod.rs  russian.rs
src/translator/lang/: belarusian.rs  bulgarian.rs  mod.rs  nil.rs  russian.rs  serbian.rs  ukrainian.rs
src/utils/: async_stdin.rs  buffer.rs  console.rs  file.rs  mod.rs
