[package]
name = "pyc"
version = "0.1.0"
authors = ["ChristianVisintin <christian.visintin1997@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
keywords = ["prompt", "shell", "bash", "fish", "zsh"]
categories = ["command-line-utilities"]
description = "Pyc is a simple CLI application, which allows you to perform shell commands in cyrillic, through command and output transliteration."
homepage = "https://github.com/ChristianVisintin/Pyc"
repository = "https://github.com/ChristianVisintin/Pyc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.3"
getopts = "0.2.21"
nix = "0.17.0"
dirs = "2.0.2"
termion = "1.5.5"
ctrlc = "3.1.4"
ansi_term = "0.12.1"
regex = "1.3.4"
lazy_static = "1.4.0"
whoami = "0.8.1"
git2 = "0.12.0"
uuid = { version = "0.8.1", features = ["v4"] }
tempfile = "3"

[[bin]]
name = "pyc"
path = "src/main.rs"
