[package]
name = "pyc-shell"
version = "0.3.0"
authors = ["Christian Visintin"]
edition = "2018"
license = "GPL-3.0"
keywords = ["prompt", "transliteration", "shell", "bash", "zsh"]
categories = ["command-line-utilities"]
description = "Pyc is a simple CLI application, which allows you to perform shell commands in cyrillic and other alphabets, through command and output transliteration."
homepage = "https://github.com/ChristianVisintin/Pyc"
repository = "https://github.com/ChristianVisintin/Pyc"
documentation = "https://docs.rs/pyc-shell"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.3"
getopts = "0.2.21"
nix = "0.19.0"
dirs = "3.0.1"
ansi_term = "0.12.1"
regex = "1.3.4"
lazy_static = "1.4.0"
whoami = "0.9.0"
git2 = "0.13.12"
uuid = { version = "0.8.1", features = ["v4"] }
tempfile = "3"
termios = "0.3.2"

[[bin]]
name = "pyc"
path = "src/main.rs"
